Hobbies and contact me change

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <li>I have done a Project in Compitative Programming .</li>
     </ul>
     </p>
-    <a href="C:\Users\HP\Desktop\Angela-Yu\My_Hobbies.html"><strong>My hobbies</strong></a>
+    <a href="My_Hobbies.html"><strong>My hobbies</strong></a>
     <br>
-    <a href="C:\Users\HP\Desktop\Angela-Yu\contacts.html"><strong>Contact Me</strong></a>
+    <a href="contacts.html"><strong>Contact Me</strong></a>
     <h3>Skills</h3>
     <hr>
     <table>
